accents et footer

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache"/>
   <meta http-equiv="Expires" content="0" />
 
-  <title>Serenichat : mediation animale et sensorielle pour enfants neuro-atypiques à Paris</title>
+  <title>Séréni'chat : médiation animale et sensorielle pour enfants neuro-atypiques à Paris</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Serenichat est un local parisien de médiation animale dédié à l'aide aux enfants neuro-atypiques (TSA, TOCs, anxiété, trisomie...)">
