--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="Pragma" content="no-cache"/>
   <meta http-equiv="Expires" content="0" />
 
-  <title>Séréni'chat : médiation animale et sensorielle pour enfants neuro-atypiques à Paris</title>
+  <title>Séréni'chat : médiation animale et sensorielle à Paris</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Serenichat est un local parisien de médiation animale dédié à l'aide aux enfants neuro-atypiques (TSA, TOCs, anxiété, trisomie...)">
-  <meta name="keywords" content="serenichat, mediation animale, paris, autisme, handicap, zoothérapie, chats, lapins, espace sensoriel, salle sensorielle"> 
+  <meta name="description" content="Serenichat est un local parisien de médiation animale dédié aux personnes neuro-atypiques, notamment les enfants (TSA, TOCs, anxiété, trisomie...)">
+  <meta name="keywords" content="serenichat, mediation animale, paris, mediation animale paris, autisme, handicap, zoothérapie, chats, lapins, espace sensoriel, salle sensorielle, médiation sensorielle"> 
   <meta name="robots" content="index,follow">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
