balises title, description et keywords

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="Pragma" content="no-cache"/>
   <meta http-equiv="Expires" content="0" />
 
-  <title>Séréni'chat : médiation animale et sensorielle à Paris</title>
+  <title>Séréni'chat : médiation animale et sensorielle, pension pour chats, cours particuliers...</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Serenichat est un local parisien de médiation animale dédié aux personnes neuro-atypiques, notamment les enfants (TSA, TOCs, anxiété, trisomie...)">
-  <meta name="keywords" content="serenichat, mediation animale, paris, mediation animale paris, autisme, handicap, zoothérapie, chats, lapins, espace sensoriel, salle sensorielle, médiation sensorielle"> 
+  <meta name="description" content="Serenichat est un local parisien proposant des séances de médiation animale et sensorielle, une offre de pension pour chats, des cours particuliers, un club Jeunes Adultes Neuro-Atypiques ainsi que la location du lieu par des professionnels de santé.">
+  <meta name="keywords" content="serenichat, sérénichat, séréni'chat, Séréni'chat, médiation animale, mediation animale Paris, médiation animale Paris, médiation animale chats, médiation animale chats Paris, médiation animale lapins, médiation animale lapins Paris, cours particuliers Paris, pension chats Paris, garde chats Paris, autisme Paris, handicap Paris, club autisme Paris, espace sensoriel Paris, zoothérapie Paris, salle sensorielle Paris, zoothérapie chats Paris, zoothérapie lapins Paris, multisensoriel Paris, multisensorielle Paris, multi-sensoriel Paris, multi-sensorielle Paris, aide aux devoirs Paris, soutien scolaire Paris"> 
   <meta name="robots" content="index,follow">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
