--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,37 @@
   <meta charset="utf-8">
   <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate"/>
   <meta http-equiv="Pragma" content="no-cache"/>
-  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="Expires" content="0"/>
 
   <title>Séréni'chat : médiation animale et sensorielle, pension pour chats, cours particuliers...</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Serenichat est un local parisien proposant des séances de médiation animale et sensorielle, une offre de pension pour chats, des cours particuliers, un club Jeunes Adultes Neuro-Atypiques ainsi que la location du lieu par des professionnels de santé.">
-  <meta name="keywords" content="serenichat, sérénichat, séréni'chat, Séréni'chat, médiation animale, mediation animale Paris, médiation animale Paris, médiation animale chats, médiation animale chats Paris, médiation animale lapins, médiation animale lapins Paris, cours particuliers Paris, pension chats Paris, garde chats Paris, autisme Paris, handicap Paris, club autisme Paris, espace sensoriel Paris, zoothérapie Paris, salle sensorielle Paris, zoothérapie chats Paris, zoothérapie lapins Paris, multisensoriel Paris, multisensorielle Paris, multi-sensoriel Paris, multi-sensorielle Paris, aide aux devoirs Paris, soutien scolaire Paris"> 
+  <meta name="description"
+        content="Serenichat est un local parisien proposant des séances de médiation animale et sensorielle, une offre de pension pour chats, des cours particuliers, un club Jeunes Adultes Neuro-Atypiques ainsi que la location du lieu par des professionnels de santé.">
+  <meta name="keywords"
+        content="serenichat, sérénichat, séréni'chat, Séréni'chat, médiation animale, mediation animale Paris, médiation animale Paris, médiation animale chats, médiation animale chats Paris, médiation animale lapins, médiation animale lapins Paris, cours particuliers Paris, pension chats Paris, garde chats Paris, autisme Paris, handicap Paris, club autisme Paris, espace sensoriel Paris, zoothérapie Paris, salle sensorielle Paris, zoothérapie chats Paris, zoothérapie lapins Paris, multisensoriel Paris, multisensorielle Paris, multi-sensoriel Paris, multi-sensorielle Paris, aide aux devoirs Paris, soutien scolaire Paris">
   <meta name="robots" content="index,follow">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FLY3WHYKVV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'G-FLY3WHYKVV');
+  </script>
+
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
